# charity_01

./: README.md
anchor-program/: Anchor.toml
anchor-program/programs/charity/: Cargo.toml
anchor-program/programs/charity/src/: lib.rs
anchor-program/tests/: charity.ts
backend/: .env  .env.example  charity.db  package-lock.json  package.json
backend/src/: index.js
backend/src/middleware/: auth.js
backend/src/models/: db.js  migrate.js
backend/src/routes/: auth.js  campaigns.js  ipfs.js  organizations.js
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: CampaignCard.jsx  DonateModal.jsx  Navbar.jsx
frontend/src/hooks/: useAuth.jsx  useCharityProgram.js
frontend/src/pages/: AuthPages.jsx  CampaignDetailPage.jsx  DashboardPage.jsx  HomePage.jsx
frontend/src/styles/: globals.css
frontend/src/utils/: api.js
