[package]
name = "charity"
version = "0.1.0"
description = "Blockchain-based Charity Donation System for Nepal"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "charity"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
